feat(spie): fix auto updater

--- a/apps/spie-ui/src/global.scss
+++ b/apps/spie-ui/src/global.scss
@@ -33,3 +33,9 @@
  */
 
 @import '@ionic/angular/css/palettes/dark.system.css';
+
+ion-modal#update-modal.md,
+ion-modal#update-modal.ios {
+  --width: 400px;
+  --height: 325px;
+}
