--- a/apps/spie-ui/src/app/app.component.html
+++ b/apps/spie-ui/src/app/app.component.html
@@ -22,6 +22,7 @@
                 [disabled]="isOpen()"
                 (click)="onClickSerialPort($event)"
                 (ionChange)="onChangeSerialPort($event)"
+                data-cy="serial-port-select"
               >
                 @for (serialPort of serialPorts(); track $index) {
                 <ion-select-option [value]="serialPort.path">
@@ -39,6 +40,7 @@
                 placeholder="Select Baud Rate"
                 (ionChange)="onChangeBaudRate($event)"
                 [value]="openOptions().baudRate"
+                data-cy="baud-rate-select"
               >
                 @for (baudRate of baudRates; track $index) {
                 <ion-select-option [value]="baudRate">{{
@@ -58,6 +60,7 @@
               expand="block"
               color="danger"
               (click)="onClickDisconnect()"
+              data-cy="disconnect-button"
               >Disconnect</ion-button
             >
             } @else {
@@ -66,6 +69,7 @@
               color="secondary"
               [disabled]="openOptions().path === ''"
               (click)="onClickConnect()"
+              data-cy="connect-button"
               >Connect</ion-button
             >
             }
