--- a/apps/spie-ui/src/app/components/send-advanced-modal/send-advanced-modal.component.html
+++ b/apps/spie-ui/src/app/components/send-advanced-modal/send-advanced-modal.component.html
@@ -2,7 +2,7 @@
   <ng-template>
     <ion-header>
       <ion-toolbar color="primary">
-        <ion-title>Advanced Send Data Settings</ion-title>
+        <ion-title>Advanced Send Settings</ion-title>
         <ion-buttons slot="end">
           <ion-button (click)="sendAdvancedModal.dismiss()">Close</ion-button>
         </ion-buttons>
