--- a/apps/spie-ui/src/app/components/send/send.component.html
+++ b/apps/spie-ui/src/app/components/send/send.component.html
@@ -1,6 +1,6 @@
 <ion-card>
   <ion-card-header>
-    <ion-text color="secondary">Send Data</ion-text>
+    <ion-text color="secondary">Send</ion-text>
   </ion-card-header>
 
   <ion-item lines="none">
