--- a/apps/spie-ui/src/app/components/serial-port-advanced-modal/serial-port-advanced-modal.component.html
+++ b/apps/spie-ui/src/app/components/serial-port-advanced-modal/serial-port-advanced-modal.component.html
@@ -2,7 +2,7 @@
   <ng-template>
     <ion-header>
       <ion-toolbar color="primary">
-        <ion-title>Advanced Connection Settings</ion-title>
+        <ion-title>Advanced Serial Port Settings</ion-title>
         <ion-buttons slot="end">
           <ion-button (click)="serialPortAdvancedModal.dismiss()"
             >Close</ion-button
