test(spie-ui-e2e): add more tests

--- a/apps/spie-ui/src/app/pages/home/send/send-advanced-modal/send-advanced-modal.component.html
+++ b/apps/spie-ui/src/app/pages/home/send/send-advanced-modal/send-advanced-modal.component.html
@@ -1,4 +1,4 @@
-<ion-modal #sendAdvancedModal>
+<ion-modal #sendAdvancedModal id="send-advanced-modal">
   <ng-template>
     <ion-header>
       <ion-toolbar color="primary">
