fix(spie-ui): rename connection component for clarity

--- a/apps/spie-ui/src/app/pages/home/connection/connection-advanced-modal/connection-advanced-modal.component.html
+++ b/apps/spie-ui/src/app/pages/home/connection/connection-advanced-modal/connection-advanced-modal.component.html
@@ -1,10 +1,10 @@
-<ion-modal #serialPortAdvancedModal id="serial-port-advanced-modal">
+<ion-modal #connectionAdvancedModal id="connection-advanced-modal">
   <ng-template>
     <ion-header>
       <ion-toolbar color="primary">
-        <ion-title>Advanced Serial Port Settings</ion-title>
+        <ion-title>Advanced Connection Settings</ion-title>
         <ion-buttons slot="end">
-          <ion-button (click)="serialPortAdvancedModal.dismiss()"
+          <ion-button (click)="connectionAdvancedModal.dismiss()"
             >Close</ion-button
           >
         </ion-buttons>
