--- a/apps/spie-ui/src/app/pages/home/home.component.html
+++ b/apps/spie-ui/src/app/pages/home/home.component.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content>
-  <app-serial-port
+  <app-connection
     [(openOptions)]="openOptions"
     [isOpen]="isOpen()"
     [reconnectSubject]="reconnectSubject"
