refactor(spie-ui): create serial port service

--- a/apps/spie-ui/src/app/pages/home/connection/connection.component.html
+++ b/apps/spie-ui/src/app/pages/home/connection/connection.component.html
@@ -69,8 +69,5 @@
     </ion-row>
   </ion-grid>
 
-  <app-connection-advanced-modal
-    [(openOptions)]="openOptions"
-    [reconnectSubject]="reconnectSubject()"
-  />
+  <app-connection-advanced-modal [reconnectSubject]="reconnectSubject" />
 </ion-card>
