--- a/apps/spie-ui/src/app/pages/home/send/send.component.html
+++ b/apps/spie-ui/src/app/pages/home/send/send.component.html
@@ -37,5 +37,5 @@
     </ion-row>
   </ion-grid>
 
-  <app-send-advanced-modal [(sendOptions)]="sendOptions" />
+  <app-send-advanced-modal />
 </ion-card>
