--- a/apps/spie-ui/src/app/pages/home/terminal/terminal.component.html
+++ b/apps/spie-ui/src/app/pages/home/terminal/terminal.component.html
@@ -36,8 +36,5 @@
     </ion-row>
   </ion-grid>
 
-  <app-terminal-advanced-modal
-    [(terminalOptions)]="terminalOptions"
-    [clearTerminalSubject]="clearTerminalSubject()"
-  />
+  <app-terminal-advanced-modal />
 </ion-card>
