feat(spie-ui): add error handling to auto updated event

--- a/apps/spie-ui/src/app/components/update-modal/update-modal.component.html
+++ b/apps/spie-ui/src/app/components/update-modal/update-modal.component.html
@@ -2,7 +2,7 @@
   <ng-template>
     <ion-header>
       <ion-toolbar color="secondary">
-        <ion-title>Transfer Progress</ion-title>
+        <ion-title>Download Progress</ion-title>
         <ion-progress-bar
           [value]="progressInfo().percent / 100"
         ></ion-progress-bar>
