--- a/apps/spie-ui/src/app/components/plotter/plotter.component.html
+++ b/apps/spie-ui/src/app/components/plotter/plotter.component.html
@@ -5,15 +5,14 @@
 
   <ion-card-content>
     <apx-chart
-      #chartObj
       [series]="series()"
-      [chart]="chart()"
-      [tooltip]="tooltip()"
-      [xaxis]="chartOptions.xaxis"
-      [yaxis]="chartOptions.yaxis"
-      [grid]="chartOptions.grid"
-      [stroke]="chartOptions.stroke"
-      [dataLabels]="chartOptions.dataLabels"
+      [chart]="chartOptions().chart"
+      [tooltip]="chartOptions().tooltip"
+      [xaxis]="chartOptions().xaxis"
+      [yaxis]="chartOptions().yaxis"
+      [grid]="chartOptions().grid"
+      [stroke]="chartOptions().stroke"
+      [dataLabels]="chartOptions().dataLabels"
     />
 
     <ion-grid>
@@ -22,9 +21,7 @@
           <ion-button
             expand="block"
             [color]="
-              isDataEventPausedSubject.getValue() && isOpen()
-                ? 'danger'
-                : 'secondary'
+              isPausedSubject.getValue() && isOpen() ? 'danger' : 'secondary'
             "
             [disabled]="!isOpen()"
             (click)="onClickPauseTerminal()"
@@ -32,16 +29,12 @@
             <ion-icon
               slot="start"
               [name]="
-                isDataEventPausedSubject.getValue() && isOpen()
+                isPausedSubject.getValue() && isOpen()
                   ? 'pause-outline'
                   : 'play-outline'
               "
             ></ion-icon>
-            {{
-              isDataEventPausedSubject.getValue() && isOpen()
-                ? 'Continue'
-                : 'Pause'
-            }}
+            {{ isPausedSubject.getValue() && isOpen() ? 'Continue' : 'Pause' }}
           </ion-button>
         </ion-col>
 
