--- a/apps/spie-ui/src/app/components/plotter/plotter.component.html
+++ b/apps/spie-ui/src/app/components/plotter/plotter.component.html
@@ -13,6 +13,8 @@
       [grid]="chartOptions().grid"
       [stroke]="chartOptions().stroke"
       [dataLabels]="chartOptions().dataLabels"
+      [legend]="chartOptions().legend"
+      [markers]="chartOptions().markers"
     />
 
     <ion-grid>
