refactor(spie-ui): refactor code for future component testing

--- a/apps/spie-ui/src/app/components/send/send.component.html
+++ b/apps/spie-ui/src/app/components/send/send.component.html
@@ -42,4 +42,4 @@
   </ion-card-content>
 </ion-card>
 
-<app-send-advanced-modal-component />
+<app-send-advanced-modal-component [(sendOptions)]="sendOptions" />
