--- a/apps/spie-ui/src/app/components/terminal/terminal.component.html
+++ b/apps/spie-ui/src/app/components/terminal/terminal.component.html
@@ -64,4 +64,5 @@
 
 <app-terminal-advanced-modal-component
   [clearTerminalSubject]="clearTerminalSubject"
+  [(terminalOptions)]="terminalOptions"
 />
