fix(repo): fix encoding when using plotter

--- a/apps/spie-ui/src/app/pages/home/home.page.html
+++ b/apps/spie-ui/src/app/pages/home/home.page.html
@@ -1,4 +1,4 @@
-<ion-tabs>
+<ion-tabs #tab (ionTabsDidChange)="onTabChange($event)">
   <app-connection-component />
 
   <ion-tab-bar slot="bottom">
