--- a/apps/spie-ui/src/app/components/plotter-advanced-modal/plotter-advanced-modal.component.html
+++ b/apps/spie-ui/src/app/components/plotter-advanced-modal/plotter-advanced-modal.component.html
@@ -21,7 +21,7 @@
             >Use sample counter<ion-icon
               color="warning"
               class="tooltipIcon-top"
-              name="help-circle-outline"
+              name="icon-help-outline-outlined"
               matTooltip="The system may not be able to capture the time of the data event on fast data rates. Use this option to use the sample count instead of the timestamp for the xaxis. You will still be able to see the timestamp information when the chart is paused "
             ></ion-icon
           ></ion-checkbox>
