--- a/apps/spie-ui/src/app/components/plotter/plotter.component.html
+++ b/apps/spie-ui/src/app/components/plotter/plotter.component.html
@@ -32,8 +32,8 @@
               slot="start"
               [name]="
                 isPausedSubject.getValue() && isOpen()
-                  ? 'pause-outline'
-                  : 'play-outline'
+                  ? 'icon-pause-outlined'
+                  : 'icon-play-arrow-outlined'
               "
             ></ion-icon>
             {{ isPausedSubject.getValue() && isOpen() ? 'Continue' : 'Pause' }}
@@ -46,7 +46,10 @@
             color="secondary"
             (click)="onClickClearSeries()"
           >
-            <ion-icon slot="start" name="trash-outline"></ion-icon>
+            <ion-icon
+              slot="start"
+              name="icon-delete-outline-outlined"
+            ></ion-icon>
             Clear
           </ion-button>
         </ion-col>
@@ -56,7 +59,7 @@
             color="secondary"
             (click)="onClickPlotterAdvancedModal()"
           >
-            <ion-icon name="settings-outline"></ion-icon>
+            <ion-icon name="icon-settings-outlined"></ion-icon>
           </ion-button>
         </ion-col>
       </ion-row>
