--- a/apps/spie-ui/src/app/components/send/send.component.html
+++ b/apps/spie-ui/src/app/components/send/send.component.html
@@ -24,7 +24,7 @@
             [disabled]="!isOpen() || !sendOptions().isSendInputValid"
             (click)="onClickSend()"
           >
-            <ion-icon slot="start" name="send-outline"></ion-icon>
+            <ion-icon slot="start" name="icon-send-outlined"></ion-icon>
             Clear Send
           </ion-button>
         </ion-col>
@@ -34,7 +34,7 @@
             color="secondary"
             (click)="onClickSendAdvancedModal()"
           >
-            <ion-icon name="settings-outline"></ion-icon>
+            <ion-icon name="icon-settings-outlined"></ion-icon>
           </ion-button>
         </ion-col>
       </ion-row>
