--- a/apps/spie-ui/src/app/components/terminal-advanced-modal/terminal-advanced-modal.component.html
+++ b/apps/spie-ui/src/app/components/terminal-advanced-modal/terminal-advanced-modal.component.html
@@ -87,7 +87,7 @@
             >Use readline parser<ion-icon
               color="warning"
               class="tooltipIcon-top"
-              name="help-circle-outline"
+              name="icon-help-outline-outlined"
               matTooltip="Data received by the serialport library might arrive in multiple packets. Use this option to make terminal timestamps more readable if your data is terminated with a new line (\n) character."
             ></ion-icon
           ></ion-checkbox>
