--- a/apps/spie-ui/src/app/pages/home/home.page.html
+++ b/apps/spie-ui/src/app/pages/home/home.page.html
@@ -3,12 +3,12 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="terminal" href="/terminal">
-      <ion-icon name="terminal-outline"></ion-icon>
+      <ion-icon name="icon-terminal-outlined"></ion-icon>
       <ion-label>Terminal</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="plotter" href="/plotter">
-      <ion-icon name="pulse-outline"></ion-icon>
+      <ion-icon name="icon-insights-outlined"></ion-icon>
       <ion-label>Plotter</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
