--- a/apps/spie-ui/src/app/pages/home/home.page.html
+++ b/apps/spie-ui/src/app/pages/home/home.page.html
@@ -2,9 +2,9 @@
   <app-connection-component />
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="terminal" href="/terminal">
+    <ion-tab-button tab="monitor" href="/monitor">
       <ion-icon name="icon-terminal-outlined"></ion-icon>
-      <ion-label>Terminal</ion-label>
+      <ion-label>Monitor</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="plotter" href="/plotter">
