--- a/apps/spie-ui/src/app/pages/home/monitor/monitor.page.html
+++ b/apps/spie-ui/src/app/pages/home/monitor/monitor.page.html
@@ -1,10 +1,10 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-title>Terminal</ion-title>
+    <ion-title>Monitor</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <app-terminal-component />
+  <app-monitor-component />
   <app-send-component />
 </ion-content>
