--- a/apps/spie-ui/src/app/components/monitor-advanced-modal/monitor-advanced-modal.component.html
+++ b/apps/spie-ui/src/app/components/monitor-advanced-modal/monitor-advanced-modal.component.html
@@ -1,10 +1,10 @@
-<ion-modal #terminalAdvancedModal id="terminal-advanced-modal">
+<ion-modal #monitorAdvancedModal id="monitor-advanced-modal">
   <ng-template>
     <ion-header>
       <ion-toolbar color="primary">
-        <ion-title>Advanced Terminal Settings</ion-title>
+        <ion-title>Advanced Monitor Settings</ion-title>
         <ion-buttons slot="end">
-          <ion-button (click)="terminalAdvancedModal.dismiss()"
+          <ion-button (click)="monitorAdvancedModal.dismiss()"
             >Close</ion-button
           >
         </ion-buttons>
@@ -18,8 +18,8 @@
             label="Encoding"
             placeholder="Select Encoding"
             justify="space-between"
-            (ionChange)="onChangeTerminalEncoding($event)"
-            [value]="terminalOptions().encoding"
+            (ionChange)="onChangeMonitorEncoding($event)"
+            [value]="monitorOptions().encoding"
           >
             <ion-select-option value="ascii">ASCII</ion-select-option>
             <ion-select-option value="hex">Hex</ion-select-option>
@@ -29,7 +29,7 @@
         <ion-item>
           <ion-checkbox
             justify="space-between"
-            checked="{{ terminalOptions().showTimestampsEnabled }}"
+            checked="{{ monitorOptions().showTimestampsEnabled }}"
             (ionChange)="onChangeShowTimestamps($event)"
             >Show Timestamps</ion-checkbox
           >
@@ -38,7 +38,7 @@
         <ion-item>
           <ion-checkbox
             justify="space-between"
-            checked="{{ terminalOptions().isAutoScrollEnabled }}"
+            checked="{{ monitorOptions().isAutoScrollEnabled }}"
             (ionChange)="onChangeAutoScroll($event)"
             >Auto Scroll</ion-checkbox
           >
@@ -56,7 +56,7 @@
             [pinFormatter]="pinFormatter"
             [value]="
               SCROLLBACK_LENGTH_VALUES.indexOf(
-                terminalOptions().scrollbackLength
+                monitorOptions().scrollbackLength
               )
             "
             (ionKnobMoveEnd)="onChangeScrollbackLength($event)"
@@ -73,7 +73,7 @@
             [min]="10"
             [max]="50"
             [step]="10"
-            [value]="terminalOptions().rows"
+            [value]="monitorOptions().rows"
             (ionKnobMoveEnd)="onChangeRows($event)"
           >
           </ion-range>
@@ -82,13 +82,13 @@
         <ion-item>
           <ion-checkbox
             justify="space-between"
-            checked="{{ terminalOptions().useReadlineParser }}"
+            checked="{{ monitorOptions().useReadlineParser }}"
             (ionChange)="onChangeUseReadlineParser($event)"
             >Use readline parser<ion-icon
               color="warning"
               class="tooltipIcon-top"
               name="icon-help-outline-outlined"
-              matTooltip="Data received by the serialport library might arrive in multiple packets. Use this option to make terminal timestamps more readable if your data is terminated with a new line (\n) character."
+              matTooltip="Data received by the serialport library might arrive in multiple packets. Use this option to make monitor timestamps more readable if your data is terminated with a new line (\n) character."
             ></ion-icon
           ></ion-checkbox>
         </ion-item>
