--- a/apps/spie-ui/src/app/components/send/send.component.html
+++ b/apps/spie-ui/src/app/components/send/send.component.html
@@ -25,7 +25,7 @@
             (click)="onClickSend()"
           >
             <ion-icon slot="start" name="icon-send-outlined"></ion-icon>
-            Clear Send
+            Send
           </ion-button>
         </ion-col>
         <ion-col size="auto">
